feat(credentials): add compatibility with Verifiable presentation cre… (#116)
feat(credentials): add compatibility with Verifiable presentation credentials